tests/typecheck/should_fail/T17955.hs
{-# LANGUAGE FlexibleContexts #-}
module T17955 where

import Data.Coerce

newtype T = Coercible () T => T ()
